src/objects/Entry__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contest__c</fullName>
        <label>Contest</label>
        <referenceTo>Contest__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entrant_Name__c</fullName>
        <formula>if (
  !ISBLANK(User__c),
  User__r.FirstName + &quot; &quot; + User__r.LastName,
  if (
    !ISBLANK( Contact__c ),
     Contact__r.FirstName  + &quot; &quot; + Contact__r.LastName,
    if (
      !ISBLANK(Lead__c),
      Lead__r.FirstName + &quot; &quot; + Lead__r.LastName,
      Free_Name__c
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entrant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Name__c</fullName>
        <description>Put anything here--it doesn&apos;t have to be a user, lead, or contact</description>
        <inlineHelpText>Put anything here--it doesn&apos;t have to be a user, lead, or contact</inlineHelpText>
        <label>Free Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prize_Won__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prize Won</label>
        <referenceTo>Prize__c</referenceTo>
        <relationshipLabel>Winners</relationshipLabel>
        <relationshipName>Winners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Entry</label>
    <nameField>
        <displayFormat>Entry-{0}</displayFormat>
        <label>Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>After_End</fullName>
        <active>true</active>
        <errorConditionFormula>and(
ISCHANGED(CreatedDate),
now() &gt; Contest__r.Stop_Accepting_Entries__c
)</errorConditionFormula>
        <errorMessage>The contest is no longer accepting entries.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Before_start</fullName>
        <active>true</active>
        <errorConditionFormula>and(
  ISCHANGED(CreatedDate),
  now() &lt; Contest__r.Start_Accepting_Entries__c
)</errorConditionFormula>
        <errorMessage>The contest is not accepting entries yet.</errorMessage>
    </validationRules>
</CustomObject>